2004-07-04  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gtk/gdk.override (_wrap_gdk_colormap_query_color): Implement
	gdk.Colormap.query_color.

	* gtk/gdk.defs (query_color): Add gdk.Colormap.query_color.

	* gtk/gtktreeview.override (pygtk_set_search_equal_func_marshal):
	Column is integer, not PyGObject! :-/

2004-07-03  John Finlay  <finlay@moeraki.com>

	* gtk/gtk.defs
	* gtk/gtk-extrafuncs.defs I goofed in placing the GenericTreeModel
	methods. Now they should be in the right place.

	* gtk/gtktreeview.override Ignore gtk_tree_view_get_search_equal_func.

	* gtk/pygtktreemodel.c
	* gtk/pygtktreemodel.h
	* gtk/gtk.defs
	Add stamp to GenericTreeModel to use in detecting valid TreeIters.
	Add invalidate_iters() method to allow custom tree models to
	manage TreeIters when not persistent.
	Add iter_is_valid() method to allow apps to determine if a TreeIter
	for a custom tree model is valid.

2004-07-03  Ross Burton  <ross@burtonini.com>

	* gtk/gdk.defs:	Add gdk_pixbuf_new_subpixbuf.

2004-07-03  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gtk/gtktreeview.override (_wrap_gtk_list_store_new): Construct
	object with g_object_newv, then call
	gtk_list_store_set_column_types().  Fixes #123037.
	(_wrap_gtk_tree_view_set_search_equal_func): Impl. Most code is
	copy-paste from
	_wrap_gtk_tree_view_set_column_drag_function. Fixes #145342.
	(_wrap_gtk_tree_selection_get_selected_rows): Initialize model to
	NULL, to avoid crash when the tree is empty.

2004-06-29  Lorenzo Gil Sanchez  <lgs@cvs.gnome.org>

	* setup.py: changed the version to 2.3.93 so we can build it on Windows
	with correct version information.

2004-06-28  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gtk/gdk.override (_wrap_gdk_window_set_user_data): Fixup and do
	some real testing of last changes, to make this really safe using
	a pair of mutual weak references between the widget and its
	window.  Fixes #145091.
