@@ -1,3 +1,14 @@
+2004-07-04  John Ehresman  <jpe@wingide.com>
+
+	* codegen/argtypes.py (GUniCharArg): Use the converter function
+	pyg_pyobj_to_unichar_conv to parse gunichar parameters, instead of
+	templated code.
+
+	* pygtype.c (pyg_pyobj_to_unichar_conv): impl.
+
+	* pygobject.h, gobjectmodule.c: Add pyg_pyobj_to_unichar_conv to list of
+	exported functions.
+
 2004-07-04  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>
 
 	* gtk/gdk.override (_wrap_gdk_colormap_query_color): Implement
